add the first test page

--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: "https://aadaptium.github.io/javadhd-blog/
+baseURL: "https://aadaptium.github.io/javadhd-blog/"
 languageCode: en-us
 title: JAVADHD Blog
 theme: Papermod
