hugo.yml added to point to custom domain

--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: "https://aadaptium.github.io/javadhd-blog/"
+baseURL: "http://javadhd.com/"
 languageCode: en-us
 title: JAVADHD Blog
 theme: PaperMod
